--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="/style.css">
+    <script defer src="/script.js"></script>
+    <title>Carousel3D</title>
 </head>
 <body>
-$END$
+<div id="drag-container">
+    <div id="spin-container">
+        <img src="/images/img1.jpg" alt="">
+        <img src="/images/img2.jpg" alt="">
+        <img src="/images/img3.avif" alt="">
+        <img src="/images/img4.jpg" alt="">
+        <img src="/images/img4avif.avif" alt="">
+        <img src="/images/img6.jpg" alt="">
+
+
+        <p>Digital Art</p>
+    </div>
+    <div id="ground"></div>
+
+</div>
 </body>
 </html>
