--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <div id="drag-container">
     <div id="spin-container">
         <img src="/images/img1.jpg" alt="">
-        <img src="/images/img2.jpg" alt="">
+        <img src="/images/img2.webp" alt="">
         <img src="/images/img3.avif" alt="">
-        <img src="/images/img4.jpg" alt="">
+        <img src="/images/img7.jpg" alt="">
         <img src="/images/img4avif.avif" alt="">
         <img src="/images/img6.jpg" alt="">
 
